cmake_minimum_required(VERSION 3.14)
project(Rtv1 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(include/SDL2)
include_directories(includes)
include_directories(libcl/include)
include_directories(libft/includes)
include_directories(libgnl/include)
include_directories(libmath/includes)
include_directories(libsdl/include)
include_directories(libsdl/include/SDL2)
include_directories(libsdl/includes)
include_directories(libvect/include)
include_directories(srcs/cl_error)

add_executable(Rtv1
        include/SDL2/begin_code.h
        include/SDL2/close_code.h
        include/SDL2/SDL.h
        include/SDL2/SDL_assert.h
        include/SDL2/SDL_atomic.h
        include/SDL2/SDL_audio.h
        include/SDL2/SDL_bits.h
        include/SDL2/SDL_blendmode.h
        include/SDL2/SDL_clipboard.h
        include/SDL2/SDL_config.h
        include/SDL2/SDL_cpuinfo.h
        include/SDL2/SDL_egl.h
        include/SDL2/SDL_endian.h
        include/SDL2/SDL_error.h
        include/SDL2/SDL_events.h
        include/SDL2/SDL_filesystem.h
        include/SDL2/SDL_gamecontroller.h
        include/SDL2/SDL_gesture.h
        include/SDL2/SDL_haptic.h
        include/SDL2/SDL_hints.h
        include/SDL2/SDL_joystick.h
        include/SDL2/SDL_keyboard.h
        include/SDL2/SDL_keycode.h
        include/SDL2/SDL_loadso.h
        include/SDL2/SDL_log.h
        include/SDL2/SDL_main.h
        include/SDL2/SDL_messagebox.h
        include/SDL2/SDL_mouse.h
        include/SDL2/SDL_mutex.h
        include/SDL2/SDL_name.h
        include/SDL2/SDL_opengl.h
        include/SDL2/SDL_opengl_glext.h
        include/SDL2/SDL_opengles.h
        include/SDL2/SDL_opengles2.h
        include/SDL2/SDL_opengles2_gl2.h
        include/SDL2/SDL_opengles2_gl2ext.h
        include/SDL2/SDL_opengles2_gl2platform.h
        include/SDL2/SDL_opengles2_khrplatform.h
        include/SDL2/SDL_pixels.h
        include/SDL2/SDL_platform.h
        include/SDL2/SDL_power.h
        include/SDL2/SDL_quit.h
        include/SDL2/SDL_rect.h
        include/SDL2/SDL_render.h
        include/SDL2/SDL_revision.h
        include/SDL2/SDL_rwops.h
        include/SDL2/SDL_scancode.h
        include/SDL2/SDL_sensor.h
        include/SDL2/SDL_shape.h
        include/SDL2/SDL_stdinc.h
        include/SDL2/SDL_surface.h
        include/SDL2/SDL_system.h
        include/SDL2/SDL_syswm.h
        include/SDL2/SDL_test.h
        include/SDL2/SDL_test_assert.h
        include/SDL2/SDL_test_common.h
        include/SDL2/SDL_test_compare.h
        include/SDL2/SDL_test_crc32.h
        include/SDL2/SDL_test_font.h
        include/SDL2/SDL_test_fuzzer.h
        include/SDL2/SDL_test_harness.h
        include/SDL2/SDL_test_images.h
        include/SDL2/SDL_test_log.h
        include/SDL2/SDL_test_md5.h
        include/SDL2/SDL_test_memory.h
        include/SDL2/SDL_test_random.h
        include/SDL2/SDL_thread.h
        include/SDL2/SDL_timer.h
        include/SDL2/SDL_touch.h
        include/SDL2/SDL_types.h
        include/SDL2/SDL_version.h
        include/SDL2/SDL_video.h
        include/SDL2/SDL_vulkan.h
        includes/libmath.h
        includes/rtv1.h
        libcl/include/libcl.h
        libcl/srcs/cl_init.c
        libcl/srcs/cl_krl_build.c
        libcl/srcs/cl_krl_exec.c
        libcl/srcs/cl_krl_init.c
        libcl/srcs/cl_read.c
        libcl/srcs/cl_write.c
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/includes/malloc.h
        libft/sources/array/ft_2darrayclean.c
        libft/sources/array/ft_2darraynew.c
        libft/sources/array/ft_arraymax.c
        libft/sources/array/ft_arraymin.c
        libft/sources/array/ft_arrayprint.c
        libft/sources/array/ft_arraysort.c
        libft/sources/btree/ft_btree_apply_by_level.c
        libft/sources/btree/ft_btree_apply_infix.c
        libft/sources/btree/ft_btree_apply_prefix.c
        libft/sources/btree/ft_btree_apply_suffix.c
        libft/sources/btree/ft_btree_create_node.c
        libft/sources/btree/ft_btree_insert_data.c
        libft/sources/btree/ft_btree_level_count.c
        libft/sources/btree/ft_btree_print.c
        libft/sources/btree/ft_btree_search_item.c
        libft/sources/get_next_line/get_next_line.c
        libft/sources/get_next_line/read_file.c
        libft/sources/lst/ft_lst2w_new.c
        libft/sources/lst/ft_lst2w_pushback.c
        libft/sources/lst/ft_lstadd.c
        libft/sources/lst/ft_lstclean.c
        libft/sources/lst/ft_lstcount.c
        libft/sources/lst/ft_lstdel.c
        libft/sources/lst/ft_lstdel_u.c
        libft/sources/lst/ft_lstdelmid.c
        libft/sources/lst/ft_lstdelone.c
        libft/sources/lst/ft_lstiter.c
        libft/sources/lst/ft_lstmap.c
        libft/sources/lst/ft_lstnew.c
        libft/sources/lst/ft_lstprint.c
        libft/sources/lst/ft_lstrev.c
        libft/sources/mem/ft_bzero.c
        libft/sources/mem/ft_malloc_err.c
        libft/sources/mem/ft_memalloc.c
        libft/sources/mem/ft_memccpy.c
        libft/sources/mem/ft_memchr.c
        libft/sources/mem/ft_memcmp.c
        libft/sources/mem/ft_memcpy.c
        libft/sources/mem/ft_memdel.c
        libft/sources/mem/ft_memmove.c
        libft/sources/mem/ft_mempcpy.c
        libft/sources/mem/ft_memprint.c
        libft/sources/mem/ft_memset.c
        libft/sources/queue/ft_queue_pop.c
        libft/sources/queue/ft_queue_push.c
        libft/sources/rb_tree/ft_rb_insert.c
        libft/sources/rb_tree/ft_rb_node_create.c
        libft/sources/rb_tree/ft_rb_node_print.c
        libft/sources/stack/ft_stack_create.c
        libft/sources/stack/ft_stack_peek.c
        libft/sources/stack/ft_stack_pop.c
        libft/sources/stack/ft_stack_print.c
        libft/sources/stack/ft_stack_push.c
        libft/sources/standart/ft_atoi.c
        libft/sources/standart/ft_countwords.c
        libft/sources/standart/ft_is_space.c
        libft/sources/standart/ft_isalnum.c
        libft/sources/standart/ft_isalpha.c
        libft/sources/standart/ft_isascii.c
        libft/sources/standart/ft_isdigit.c
        libft/sources/standart/ft_isprint.c
        libft/sources/standart/ft_itoa.c
        libft/sources/standart/ft_malloc_err.c
        libft/sources/standart/ft_nsplit.c
        libft/sources/standart/ft_point_new.c
        libft/sources/standart/ft_print_node.c
        libft/sources/standart/ft_printmap.c
        libft/sources/standart/ft_ptr_free.c
        libft/sources/standart/ft_putchar.c
        libft/sources/standart/ft_putchar_fd.c
        libft/sources/standart/ft_putendl.c
        libft/sources/standart/ft_putendl_fd.c
        libft/sources/standart/ft_putnbr.c
        libft/sources/standart/ft_putnbr_fd.c
        libft/sources/standart/ft_putstr.c
        libft/sources/standart/ft_putstr_fd.c
        libft/sources/standart/ft_realloc.c
        libft/sources/standart/ft_sign.c
        libft/sources/standart/ft_swap_int.c
        libft/sources/standart/ft_tolower.c
        libft/sources/standart/ft_toupper.c
        libft/sources/str/ft_nsplit.c
        libft/sources/str/ft_strcat.c
        libft/sources/str/ft_strchr.c
        libft/sources/str/ft_strclr.c
        libft/sources/str/ft_strcmp.c
        libft/sources/str/ft_strcpy.c
        libft/sources/str/ft_strdel.c
        libft/sources/str/ft_strdup.c
        libft/sources/str/ft_strequ.c
        libft/sources/str/ft_striter.c
        libft/sources/str/ft_striteri.c
        libft/sources/str/ft_strjoin.c
        libft/sources/str/ft_strlcat.c
        libft/sources/str/ft_strlen.c
        libft/sources/str/ft_strmap.c
        libft/sources/str/ft_strmapi.c
        libft/sources/str/ft_strncat.c
        libft/sources/str/ft_strncmp.c
        libft/sources/str/ft_strncpy.c
        libft/sources/str/ft_strnequ.c
        libft/sources/str/ft_strnew.c
        libft/sources/str/ft_strnewch.c
        libft/sources/str/ft_strnstr.c
        libft/sources/str/ft_strrchr.c
        libft/sources/str/ft_strsplit.c
        libft/sources/str/ft_strstr.c
        libft/sources/str/ft_strsub.c
        libft/sources/str/ft_strtrim.c
        libft/sources/str/ft_word.c
        libft/sources/vector/ft_word.c
        libft/sources/vector/vector_add.c
        libft/sources/vector/vector_delete.c
        libft/sources/vector/vector_free.c
        libft/sources/vector/vector_get.c
        libft/sources/vector/vector_init.c
        libft/sources/vector/vector_resize.c
        libft/sources/vector/vector_set.c
        libft/sources/vector/vector_total.c
        libft/test/main.c
        libgnl/include/libgnl.h
        libgnl/sources/gnl_lines.c
        libgnl/sources/gnl_vect.c
        libmath/includes/libmath.h
        libmath/srcs/ft_vec3_create.c
        libmath/srcs/ft_vec3_cross_multiply.c
        libmath/srcs/ft_vec3_dot_multiply.c
        libmath/srcs/ft_vec3_neg.c
        libmath/srcs/ft_vec3_norm.c
        libmath/srcs/ft_vec3_normalize.c
        libmath/srcs/ft_vec3_projection.c
        libmath/srcs/ft_vec3_scalar_multiply.c
        libmath/srcs/ft_vec3_substract.c
        libmath/srcs/ft_vec3_sum.c
        libmath/srcs/matrix.c
        libsdl/include/SDL2/begin_code.h
        libsdl/include/SDL2/close_code.h
        libsdl/include/SDL2/SDL.h
        libsdl/include/SDL2/SDL_assert.h
        libsdl/include/SDL2/SDL_atomic.h
        libsdl/include/SDL2/SDL_audio.h
        libsdl/include/SDL2/SDL_bits.h
        libsdl/include/SDL2/SDL_blendmode.h
        libsdl/include/SDL2/SDL_clipboard.h
        libsdl/include/SDL2/SDL_config.h
        libsdl/include/SDL2/SDL_cpuinfo.h
        libsdl/include/SDL2/SDL_egl.h
        libsdl/include/SDL2/SDL_endian.h
        libsdl/include/SDL2/SDL_error.h
        libsdl/include/SDL2/SDL_events.h
        libsdl/include/SDL2/SDL_filesystem.h
        libsdl/include/SDL2/SDL_gamecontroller.h
        libsdl/include/SDL2/SDL_gesture.h
        libsdl/include/SDL2/SDL_haptic.h
        libsdl/include/SDL2/SDL_hints.h
        libsdl/include/SDL2/SDL_joystick.h
        libsdl/include/SDL2/SDL_keyboard.h
        libsdl/include/SDL2/SDL_keycode.h
        libsdl/include/SDL2/SDL_loadso.h
        libsdl/include/SDL2/SDL_log.h
        libsdl/include/SDL2/SDL_main.h
        libsdl/include/SDL2/SDL_messagebox.h
        libsdl/include/SDL2/SDL_mouse.h
        libsdl/include/SDL2/SDL_mutex.h
        libsdl/include/SDL2/SDL_name.h
        libsdl/include/SDL2/SDL_opengl.h
        libsdl/include/SDL2/SDL_opengl_glext.h
        libsdl/include/SDL2/SDL_opengles.h
        libsdl/include/SDL2/SDL_opengles2.h
        libsdl/include/SDL2/SDL_opengles2_gl2.h
        libsdl/include/SDL2/SDL_opengles2_gl2ext.h
        libsdl/include/SDL2/SDL_opengles2_gl2platform.h
        libsdl/include/SDL2/SDL_opengles2_khrplatform.h
        libsdl/include/SDL2/SDL_pixels.h
        libsdl/include/SDL2/SDL_platform.h
        libsdl/include/SDL2/SDL_power.h
        libsdl/include/SDL2/SDL_quit.h
        libsdl/include/SDL2/SDL_rect.h
        libsdl/include/SDL2/SDL_render.h
        libsdl/include/SDL2/SDL_revision.h
        libsdl/include/SDL2/SDL_rwops.h
        libsdl/include/SDL2/SDL_scancode.h
        libsdl/include/SDL2/SDL_sensor.h
        libsdl/include/SDL2/SDL_shape.h
        libsdl/include/SDL2/SDL_stdinc.h
        libsdl/include/SDL2/SDL_surface.h
        libsdl/include/SDL2/SDL_system.h
        libsdl/include/SDL2/SDL_syswm.h
        libsdl/include/SDL2/SDL_test.h
        libsdl/include/SDL2/SDL_test_assert.h
        libsdl/include/SDL2/SDL_test_common.h
        libsdl/include/SDL2/SDL_test_compare.h
        libsdl/include/SDL2/SDL_test_crc32.h
        libsdl/include/SDL2/SDL_test_font.h
        libsdl/include/SDL2/SDL_test_fuzzer.h
        libsdl/include/SDL2/SDL_test_harness.h
        libsdl/include/SDL2/SDL_test_images.h
        libsdl/include/SDL2/SDL_test_log.h
        libsdl/include/SDL2/SDL_test_md5.h
        libsdl/include/SDL2/SDL_test_memory.h
        libsdl/include/SDL2/SDL_test_random.h
        libsdl/include/SDL2/SDL_thread.h
        libsdl/include/SDL2/SDL_timer.h
        libsdl/include/SDL2/SDL_touch.h
        libsdl/include/SDL2/SDL_types.h
        libsdl/include/SDL2/SDL_version.h
        libsdl/include/SDL2/SDL_video.h
        libsdl/include/SDL2/SDL_vulkan.h
        libsdl/includes/libsdl.h
        libsdl/srcs/ft_draw_poly.c
        libsdl/srcs/ft_exit.c
        libsdl/srcs/ft_get_color.c
        libsdl/srcs/ft_get_light.c
        libsdl/srcs/ft_hex_to_rgb.c
        libsdl/srcs/ft_init_window.c
        libsdl/srcs/ft_input.c
        libsdl/srcs/ft_line.c
        libsdl/srcs/ft_lineclip.c
        libsdl/srcs/ft_percent.c
        libsdl/srcs/ft_plot_line.c
        libsdl/srcs/ft_plot_wline.c
        libsdl/srcs/ft_ppm_image_read.c
        libsdl/srcs/ft_ppm_image_write.c
        libsdl/srcs/ft_put_pixel.c
        libsdl/srcs/ft_rasterizer.c
        libsdl/srcs/ft_rgb_to_hex.c
        libsdl/srcs/ft_surface_clear.c
        libsdl/srcs/ft_surface_combine.c
        libsdl/srcs/ft_surface_create.c
        libsdl/srcs/ft_surface_present.c
        libsdl/srcs/ft_texture_create.c
        libsdl/srcs/ft_texture_lock.c
        libsdl/srcs/ft_texture_present.c
        libsdl/srcs/ft_vline.c
        libvect/include/libvect.h
        libvect/sources/vect_add.c
        libvect/sources/vect_cmp.c
        libvect/sources/vect_del.c
        libvect/sources/vect_grow.c
        libvect/sources/vect_init.c
        libvect/sources/vect_memcmp.c
        libvect/sources/vect_memmem.c
        libvect/sources/vect_mset.c
        libvect/sources/vect_mset_end.c
        libvect/sources/vect_new.c
        libvect/sources/vect_print.c
        libvect/sources/vect_push.c
        libvect/sources/vect_req.c
        libvect/sources/vect_str_add.c
        libvect/sources/vect_str_push.c
        libvect/sources/vect_wrap.c
        srcs/camera/camera_move.c
        srcs/camera/camera_new.c
        srcs/cl_error/cl_error.h
        srcs/cl_lib/gpu_init.c
        srcs/main.c)
